src/native/libs/Evergreen.Graphics/egImGui.h

typedef int EgImGuiBool;
typedef struct {
	void* internal;
} EgImGuiContext;
typedef struct {
    float x;
    float y;
} EgImGuiVector2;
typedef struct {
    float x;
    float y;
    float z;
    float w;
} EgImGuiVector4;
// This is a 1:1 with ImGuiInputTextFlags.
enum EgImGuiInputTextFlags
{
    EgImGuiInputTextFlags_None = 0,
    EgImGuiInputTextFlags_CharsDecimal = 1 << 0,   // Allow 0123456789.+-*/
    EgImGuiInputTextFlags_CharsHexadecimal = 1 << 1,   // Allow 0123456789ABCDEFabcdef
    EgImGuiInputTextFlags_CharsUppercase = 1 << 2,   // Turn a..z into A..Z
    EgImGuiInputTextFlags_CharsNoBlank = 1 << 3,   // Filter out spaces, tabs
    EgImGuiInputTextFlags_AutoSelectAll = 1 << 4,   // Select entire text when first taking mouse focus
    EgImGuiInputTextFlags_EnterReturnsTrue = 1 << 5,   // Return 'true' when Enter is pressed (as opposed to every time the value was modified). Consider looking at the IsItemDeactivatedAfterEdit() function.
    EgImGuiInputTextFlags_CallbackCompletion = 1 << 6,   // Callback on pressing TAB (for completion handling)
    EgImGuiInputTextFlags_CallbackHistory = 1 << 7,   // Callback on pressing Up/Down arrows (for history handling)
    EgImGuiInputTextFlags_CallbackAlways = 1 << 8,   // Callback on each iteration. User code may query cursor position, modify text buffer.
    EgImGuiInputTextFlags_CallbackCharFilter = 1 << 9,   // Callback on character inputs to replace or discard them. Modify 'EventChar' to replace or discard, or return 1 in callback to discard.
    EgImGuiInputTextFlags_AllowTabInput = 1 << 10,  // Pressing TAB input a '\t' character into the text field
    EgImGuiInputTextFlags_CtrlEnterForNewLine = 1 << 11,  // In multi-line mode, unfocus with Enter, add new line with Ctrl+Enter (default is opposite: unfocus with Ctrl+Enter, add line with Enter).
    EgImGuiInputTextFlags_NoHorizontalScroll = 1 << 12,  // Disable following the cursor horizontally
    EgImGuiInputTextFlags_AlwaysOverwrite = 1 << 13,  // Overwrite mode
    EgImGuiInputTextFlags_ReadOnly = 1 << 14,  // Read-only mode
    EgImGuiInputTextFlags_Password = 1 << 15,  // Password mode, display all characters as '*'
    EgImGuiInputTextFlags_NoUndoRedo = 1 << 16,  // Disable undo/redo. Note that input text owns the text data while active, if you want to provide your own undo/redo stack you need e.g. to call ClearActiveID().
    EgImGuiInputTextFlags_CharsScientific = 1 << 17,  // Allow 0123456789.+-*/eE (Scientific notation input)
    EgImGuiInputTextFlags_CallbackResize = 1 << 18,  // Callback on buffer capacity changes request (beyond 'buf_size' parameter value), allowing the string to grow. Notify when the string wants to be resized (for string types which hold a cache of their Size). You will be provided a new BufSize in the callback and NEED to honor it. (see misc/cpp/imgui_stdlib.h for an example of using this)
    EgImGuiInputTextFlags_CallbackEdit = 1 << 19,  // Callback on any edit (note that InputText() already returns true on edit, the callback is useful mainly to manipulate the underlying buffer while focus is active)
    EgImGuiInputTextFlags_EscapeClearsAll = 1 << 20,  // Escape key clears content if not empty, and deactivate otherwise (contrast to default behavior of Escape to revert)
};
// 1:1 with ImGuiInputTextCallbackData
typedef struct {
    void* Ctx;            // Parent UI context
    EgImGuiInputTextFlags EventFlag;      // One ImGuiInputTextFlags_Callback*    // Read-only
    EgImGuiInputTextFlags Flags;          // What user passed to InputText()      // Read-only
    void* UserData;       // What user passed to InputText()      // Read-only

    // Arguments for the different callback events
    // - To modify the text buffer in a callback, prefer using the InsertChars() / DeleteChars() function. InsertChars() will take care of calling the resize callback if necessary.
    // - If you know your edits are not going to resize the underlying buffer allocation, you may modify the contents of 'Buf[]' directly. You need to update 'BufTextLen' accordingly (0 <= BufTextLen < BufSize) and set 'BufDirty'' to true so InputText can update its internal state.
    unsigned int             EventChar;      // Character input                      // Read-write   // [CharFilter] Replace character with another one, or set to zero to drop. return 1 is equivalent to setting EventChar=0;
    int            EventKey;       // Key pressed (Up/Down/TAB)            // Read-only    // [Completion,History]
    char* Buf;            // Text buffer                          // Read-write   // [Resize] Can replace pointer / [Completion,History,Always] Only write to pointed data, don't replace the actual pointer!
    int                 BufTextLen;     // Text length (in bytes)               // Read-write   // [Resize,Completion,History,Always] Exclude zero-terminator storage. In C land: == strlen(some_text), in C++ land: string.length()
    int                 BufSize;        // Buffer size (in bytes) = capacity+1  // Read-only    // [Resize,Completion,History,Always] Include zero-terminator storage. In C land == ARRAYSIZE(my_char_array), in C++ land: string.capacity()+1
    bool                BufDirty;       // Set if you modify Buf/BufTextLen!    // Write        // [Completion,History,Always]
    int                 CursorPos;      //                                      // Read-write   // [Completion,History,Always]
    int                 SelectionStart; //                                      // Read-write   // [Completion,History,Always] == to SelectionEnd when no selection)
    int                 SelectionEnd;   //                                      // Read-write   // [Completion,History,Always]
} EgImGui_InputTextCallbackData;
    EG_EXPORT EgImGuiContext egImGuiCreateContextVulkan(
        EgWindow window,
        VkInstance instance,
        VkPhysicalDevice physicalDevice,
        VkDevice device,
        unsigned int graphicsQueueFamilyIndex,
        VkQueue graphicsQueue,
        unsigned int minImageCount,
        unsigned int imageCount,
        VkRenderPass renderPass,
        void(*callbackCheckVulkanInitialization)(VkResult)
    );
    EG_EXPORT void egImGuiSetNextWindowSize(EgImGuiContext context, EgImGuiVector2 size);
    EG_EXPORT EgImGuiVector2 egImGuiGetWindowPosition(EgImGuiContext context);
    EG_EXPORT EgImGuiVector2 egImGuiGetWindowSize(EgImGuiContext context);
    EG_EXPORT void egImGuiSetWindowPosition(EgImGuiContext context, EgImGuiVector2 position);
    EG_EXPORT void egImGuiSetWindowSize(EgImGuiContext context, EgImGuiVector2 size);
    EG_EXPORT EgImGuiVector2 egImGuiCalculateWindowSize(EgImGuiContext context);
    EG_EXPORT void egImGuiText(EgImGuiContext context, const char* text);
    EG_EXPORT void egImGuiLabelText(EgImGuiContext context, const char* label, const char* text);
    EG_EXPORT EgImGuiBool egImGuiInputText(EgImGuiContext context, const char* label, char* buffer, size_t bufferSize, EgImGuiInputTextFlags flags, int(*callback)(EgImGui_InputTextCallbackData));
    EG_EXPORT EgImGuiBool egImGuiInputInt(EgImGuiContext context, const char* label, int& value);
    EG_EXPORT EgImGuiBool egImGuiCheckbox(EgImGuiContext context, const char* label, bool& value);
    EG_EXPORT EgImGuiBool egImGuiButton(EgImGuiContext context, const char* label, EgImGuiVector2 size);
    EG_EXPORT EgImGuiBool egImGuiCombo(EgImGuiContext context, const char* label, int& selectedItemIndex, char** items, int itemCount, int popupMaxHeight);
    EG_EXPORT void egImGuiPlotLines(EgImGuiContext context, const char* label, float* values, int valuesLength, int offset, const char* overlayText, float scaleMin, float scaleMax, EgImGuiVector2 size);
    EG_EXPORT VkDescriptorSet egImGuiAddTextureVulkan(EgImGuiContext context, VkSampler sampler, VkImageView imageView, VkImageLayout imageLayout);
    EG_EXPORT void egImGuiRemoveTextureVulkan(EgImGuiContext context, VkDescriptorSet descriptorSet);
    EG_EXPORT void egImGuiImageVulkan(EgImGuiContext context, VkDescriptorSet texture, EgImGuiVector2 size, EgImGuiVector2 uv0, EgImGuiVector2 uv1, EgImGuiVector4 borderColor);
    EG_EXPORT EgImGuiBool egImGuiBeginTabBar(EgImGuiContext context);
    EG_EXPORT unsigned int egImGuiGetSelectedTabId(EgImGuiContext context);
    EG_EXPORT void egImGuiFocusTabById(EgImGuiContext context, unsigned int tabId);
    EG_EXPORT void egImGuiEndTabBar(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBeginTabItem(EgImGuiContext context, const char* label, bool& isOpen);
    EG_EXPORT void egImGuiEndTabItem(EgImGuiContext context);
    EG_EXPORT void egImGuiBeginGroup(EgImGuiContext context);
    EG_EXPORT void egImGuiEndGroup(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBeginListBox(EgImGuiContext context, const char* label, EgImGuiVector2 size);
    EG_EXPORT void egImGuiEndListBox(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBeginItemTooltip(EgImGuiContext context);
    EG_EXPORT void egImGuiEndTooltip(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiBeginTable(EgImGuiContext context, int columnCount);
    EG_EXPORT void egImGuiEndTable(EgImGuiContext context);
    EG_EXPORT int egImGuiTableGetCurrentRow(EgImGuiContext context);
    EG_EXPORT void egImGuiTableNextRow(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiTableSetColumnIndex(EgImGuiContext context, int columnIndex);
    EG_EXPORT void egImGuiBeginTableCell(EgImGuiContext context, int column);
    EG_EXPORT void egImGuiEndTableCell(EgImGuiContext context);
    EG_EXPORT void egImGuiBeginClipper(EgImGuiContext context, int amount);
    EG_EXPORT void egImGuiEndClipper(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiClipperStep(EgImGuiContext context);
    EG_EXPORT int egImGuiClipperDisplayStart(EgImGuiContext context);
    EG_EXPORT int egImGuiClipperDisplayEnd(EgImGuiContext context);
    EG_EXPORT void egImGuiTableSetupColumnNoHeaderLabel(EgImGuiContext context);
    EG_EXPORT EgImGuiBool egImGuiTableNextColumn(EgImGuiContext context);
    EG_EXPORT void egImGuiTextUnformatted(EgImGuiContext context, const char* text, const char* textEnd);