src/managed/Graphics/UI/Backend/ImGui/Interop/Methods.cs


    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetNextWindowSize(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiGetWindowPosition(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiGetWindowSize(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetWindowPosition(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 position);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiSetWindowSize(EgImGuiContext context, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiVector2")]
    public static extern System.Numerics.Vector2 egImGuiCalculateWindowSize(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiText(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* text);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiLabelText(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("const char *")] sbyte* text);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiInputText(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("char *")] sbyte* buffer, [NativeTypeName("size_t")] nuint bufferSize, EgImGuiInputTextFlags flags, [NativeTypeName("int (*)(EgImGui_InputTextCallbackData)")] delegate* unmanaged[Cdecl]<EgImGui_InputTextCallbackData, int> callback);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiInputInt(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("int &")] int* value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiCheckbox(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("bool &")] bool* value);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiButton(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiCombo(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("int &")] int* selectedItemIndex, [NativeTypeName("char **")] sbyte** items, int itemCount, int popupMaxHeight);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiPlotLines(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, float* values, int valuesLength, int offset, [NativeTypeName("const char *")] sbyte* overlayText, float scaleMin, float scaleMax, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("VkDescriptorSet")]
    public static extern TerraFX.Interop.Vulkan.VkDescriptorSet egImGuiAddTextureVulkan(EgImGuiContext context, [NativeTypeName("VkSampler")] TerraFX.Interop.Vulkan.VkSampler sampler, [NativeTypeName("VkImageView")] TerraFX.Interop.Vulkan.VkImageView imageView, [NativeTypeName("VkImageLayout")] TerraFX.Interop.Vulkan.VkImageLayout imageLayout);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiRemoveTextureVulkan(EgImGuiContext context, [NativeTypeName("VkDescriptorSet")] TerraFX.Interop.Vulkan.VkDescriptorSet descriptorSet);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiImageVulkan(EgImGuiContext context, [NativeTypeName("VkDescriptorSet")] TerraFX.Interop.Vulkan.VkDescriptorSet texture, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 uv0, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 uv1, [NativeTypeName("EgImGuiVector4")] System.Numerics.Vector4 borderColor);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginTabBar(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint egImGuiGetSelectedTabId(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiFocusTabById(EgImGuiContext context, [NativeTypeName("unsigned int")] uint tabId);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndTabBar(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginTabItem(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("bool &")] bool* isOpen);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndTabItem(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiBeginGroup(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndGroup(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginListBox(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* label, [NativeTypeName("EgImGuiVector2")] System.Numerics.Vector2 size);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndListBox(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginItemTooltip(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndTooltip(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiBeginTable(EgImGuiContext context, int columnCount);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndTable(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern int egImGuiTableGetCurrentRow(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiTableNextRow(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiTableSetColumnIndex(EgImGuiContext context, int columnIndex);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiBeginTableCell(EgImGuiContext context, int column);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndTableCell(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiBeginClipper(EgImGuiContext context, int amount);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiEndClipper(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiClipperStep(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern int egImGuiClipperDisplayStart(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern int egImGuiClipperDisplayEnd(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiTableSetupColumnNoHeaderLabel(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("EgImGuiBool")]
    public static extern System.Boolean egImGuiTableNextColumn(EgImGuiContext context);

    [DllImport("Evergreen.Graphics.Native.dll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    public static extern void egImGuiTextUnformatted(EgImGuiContext context, [NativeTypeName("const char *")] sbyte* text, [NativeTypeName("const char *")] sbyte* textEnd);
